# Jiyoon-Kim

./: README.md
project/: pyproject.toml
project/.postman/: resources.yaml
project/accounts/migrations/: 0001_initial.py
project/config/: middleware.py  settings.py  urls.py
project/posts/: admin.py  models.py  urls.py  views.py
project/posts/migrations/: 0001_initial.py  0002_post_writer.py  0003_category_post_categories_comment.py
project/posts/templates/: index.html
