[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "yoon3660",email = "yoon3660@cau.ac.kr"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
